; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/dlm/extr_lock.c__receive_convert_reply.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/dlm/extr_lock.c__receive_convert_reply.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dlm_lkb = type { %struct.dlm_rsb* }
%struct.dlm_rsb = type { i32 }
%struct.dlm_message = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dlm_lkb*, %struct.dlm_message*)* @_receive_convert_reply to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_receive_convert_reply(%struct.dlm_lkb* %0, %struct.dlm_message* %1) #0 {
  %3 = alloca %struct.dlm_lkb*, align 8
  %4 = alloca %struct.dlm_message*, align 8
  %5 = alloca %struct.dlm_rsb*, align 8
  %6 = alloca i32, align 4
  store %struct.dlm_lkb* %0, %struct.dlm_lkb** %3, align 8
  store %struct.dlm_message* %1, %struct.dlm_message** %4, align 8
  %7 = load %struct.dlm_lkb*, %struct.dlm_lkb** %3, align 8
  %8 = getelementptr inbounds %struct.dlm_lkb, %struct.dlm_lkb* %7, i32 0, i32 0
  %9 = load %struct.dlm_rsb*, %struct.dlm_rsb** %8, align 8
  store %struct.dlm_rsb* %9, %struct.dlm_rsb** %5, align 8
  %10 = load %struct.dlm_rsb*, %struct.dlm_rsb** %5, align 8
  %11 = call i32 @hold_rsb(%struct.dlm_rsb* %10)
  %12 = load %struct.dlm_rsb*, %struct.dlm_rsb** %5, align 8
  %13 = call i32 @lock_rsb(%struct.dlm_rsb* %12)
  %14 = load %struct.dlm_lkb*, %struct.dlm_lkb** %3, align 8
  %15 = load %struct.dlm_message*, %struct.dlm_message** %4, align 8
  %16 = call i32 @validate_message(%struct.dlm_lkb* %14, %struct.dlm_message* %15)
  store i32 %16, i32* %6, align 4
  %17 = load i32, i32* %6, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %2
  br label %32

20:                                               ; preds = %2
  %21 = load %struct.dlm_lkb*, %struct.dlm_lkb** %3, align 8
  %22 = load %struct.dlm_message*, %struct.dlm_message** %4, align 8
  %23 = call i32 @remove_from_waiters_ms(%struct.dlm_lkb* %21, %struct.dlm_message* %22)
  store i32 %23, i32* %6, align 4
  %24 = load i32, i32* %6, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %27

26:                                               ; preds = %20
  br label %32

27:                                               ; preds = %20
  %28 = load %struct.dlm_rsb*, %struct.dlm_rsb** %5, align 8
  %29 = load %struct.dlm_lkb*, %struct.dlm_lkb** %3, align 8
  %30 = load %struct.dlm_message*, %struct.dlm_message** %4, align 8
  %31 = call i32 @__receive_convert_reply(%struct.dlm_rsb* %28, %struct.dlm_lkb* %29, %struct.dlm_message* %30)
  br label %32

32:                                               ; preds = %27, %26, %19
  %33 = load %struct.dlm_rsb*, %struct.dlm_rsb** %5, align 8
  %34 = call i32 @unlock_rsb(%struct.dlm_rsb* %33)
  %35 = load %struct.dlm_rsb*, %struct.dlm_rsb** %5, align 8
  %36 = call i32 @put_rsb(%struct.dlm_rsb* %35)
  ret void
}

declare dso_local i32 @hold_rsb(%struct.dlm_rsb*) #1

declare dso_local i32 @lock_rsb(%struct.dlm_rsb*) #1

declare dso_local i32 @validate_message(%struct.dlm_lkb*, %struct.dlm_message*) #1

declare dso_local i32 @remove_from_waiters_ms(%struct.dlm_lkb*, %struct.dlm_message*) #1

declare dso_local i32 @__receive_convert_reply(%struct.dlm_rsb*, %struct.dlm_lkb*, %struct.dlm_message*) #1

declare dso_local i32 @unlock_rsb(%struct.dlm_rsb*) #1

declare dso_local i32 @put_rsb(%struct.dlm_rsb*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
